2/2/11 horizontally align equation terms and molecule columns
2/2/11 adjust box size and separation
2/2/11 abandon HorizontalAligner approach to alignment of multiple representations
2/2/11 capitalize view choices
2/2/11 fix: order of bars should be the same for reactants and products
2/2/11 move atom counting to Equation model
2/2/11 change request: make equality sign in bar charts the same color as equation arrows
2/2/11 change request: make '+' in equations black
2/2/11 change request: do not reset coefficients when switching equations
2/2/11 change request: add "none" as a choice of visual representations
2/2/11 fix: set background for control panels in play area
2/1/11 doc
2/1/11 remove unused code
# 0.00.01 (48489) Feb 1, 2011
2/1/11 dev version for discussion with KL, no horizontal alignment
2/1/11 fix layout of balance scales so that fulcrums remain in fixed locations
2/1/11 wire up Options->Show molecules
2/1/11 add skeleton for Options menu
2/1/11 implement tilt of balance scale beam
2/1/11 completed piles of atoms on balance scales
2/1/11 first pass at piles of atoms on balance scale beam, has some problems
2/1/11 reduce max limit of bars, don't add additional height for arrows, reduce size of bars
1/31/11 add dev team credits
1/31/11 make smiley face much smaller, change layout
1/31/11 add dev node that shows the balanced equation
1/31/11 partial implementation of balance scales view (fulcrums only)
1/31/11 completed bar charts view with simplified horizontal alignment
1/31/11 partial implementation of bar charts view
1/27/11 add enum of atoms
1/26/11 bar that displays atom count
1/26/11 add atom colors
1/26/11 add atoms to model
1/26/11 add image files for atoms
1/25/11 check in images of individual atoms to assets directory, provided by KL 
1/11/11 show smiley face in "Balance Equation" module when equation is balanced
1/11/11 allow size of boxes to vary by instance, since Game will require larger boxes
1/11/11 add stubs for Game model and canvas